--- a/paper/tex/applications.tex
+++ b/paper/tex/applications.tex
@@ -42,15 +42,30 @@ where $\Delta x_{min}$ is the size of the smallest cell of the forest. The gener
 
 \subsection{Scalability}
 
-The implementation of the Stefan problem relies on the components described in the previous sections, and it is therefore a good summary of the performance of the various algorithms. We monitored the performance of the code over five time iterations, as presented in algorithm \ref{alg:stefan}, for two different maximum resolutions. In both cases, the forest is built on a $20\times20\times20$ macro-mesh. The maximum tree resolution for the small test is 9, leading to approximately 7M grid points, and the maximum resolution for the large test is 11, corresponding to 105M grid points. The results are presented in figure \ref{fig:stefan_scaling}. As expected from the results obtained for each component in the previous sections, our implementation of the Stefan problem exhibits very satisfactory scaling.
+The implementation of the Stefan problem relies on the components described in the previous sections, and it is therefore a good summary of the performance of the various algorithms. We monitored the performance of the code over five time iterations, as presented in algorithm \ref{alg:stefan}, for two different maximum resolutions. In both cases, the forest is built on a $20\times20\times20$ macro-mesh. The maximum tree resolution for the small test is 9, leading to approximately 7M grid points, and the maximum resolution for the large test is 11, corresponding to 105M grid points. The results are presented in figure \ref{fig:stefan_scaling}. As expected from the results obtained for each component in the previous sections, our implementation of the Stefan problem exhibits very satisfactory scaling (c.f.\ table \ref{tab:scaling_stefan}).
 
 \begin{figure}
 \centering
-\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_scaling_small.pdf}}
-\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_scaling_large.pdf}}
-\caption{Scalability of the Stefan problem for small (left) and large (right) octrees with roughly 7M and 105M grid points, respectively. As expected from the scalability analysis of the individual components, we observe excellent results, illustrating the potential \mohammad{applicability?} of our solver \mohammad{algorithms?}.}
+\subfigure[]{\includegraphics[width=0.48\textwidth]{figures/Stefan_small.pdf}}
+\subfigure[]{\includegraphics[width=0.48\textwidth]{figures/Stefan_large.pdf}}
+\caption{Scalability of the Stefan problem for small (left) and large (right) octrees with roughly 7M and 105M grid points, respectively. The solid dashed line represents perfect scaling. As expected from the scalability analysis of the individual components, we observe excellent results, illustrating the potential \mohammad{applicability?} of our solver \mohammad{algorithms?}.}
 \label{fig:stefan_scaling}
 \end{figure}
+
+\begin{table}
+\centering
+	\begin{tabular}{|l|c|cccccc|}
+	\hline
+	\multirow{2}{*}{Small Test} & $P$ & 16      & 32      & 64      & 128     & 256    & 512 \\ 	                            
+	                            & $e$ & $100\%$ & $95\%$  & $90\%$  & $82\%$  & $73\%$ & $64\%$ \\
+	\hline
+	\multirow{2}{*}{Large Test} & $P$ & 128     & 256     & 512     & 1024    & 2048   & 4096 \\ 	                            
+	                            & $e$ & $100\%$ & $98\%$  & $94\%$  & $89\%$  & $73\%$ & $61\%$ \\
+	\hline
+	\end{tabular}
+	\caption{Parallel efficiency of the total runtime for the stefan test based on the lowest number of processes for each test.}
+	\label{tab:scaling_stefan} 
+\end{table}
 
 \subsection{Numerical experiments}
 \mohammad{too many transitive statements and keyword ``choose''. Can we rephrase this?}
